3.0 -> 3.0.1
	- fix: %verifyscript resurrected. (Shing-Gene Yung).
	- fix: % before non-alphabetic non-macro special now passed unscathed.
	- fix: noarch header gets initialized differently.
	- fix: $2 to triggerpostun scripts was wrong
	- fix: --querybypkg in man page should be --filesbypkg
	- fix: optflags not implicitly set to canonical arch value.

2.94 -> 2.95
	- fix: last update transaction set segfault bug in installer.
	- improved checks for statfs (Tim Mooney).
	- remove inconsistent use of __P((...)) throughout.
	- non-static inline functions caused IRIX cc pain.
	- CPIOERR_CHECK_ERRNO masking caused AIX cc warnings.
	- solaris 2.6+ needs statvfs.
	- check build prerequisites before building from specfile.
	- convert per-system configuration in /etc/rpmrc to macros.

2.93 -> 2.94
	- fix: segfault while parsing target string.
	- fix: os was not initialized with "--target i586".
	- fix: --prefix resurrected.
	- non-linux, non-gcc portability fixes (Tim Mooney).
	- default to static libs only (remove implied support for shared libs).

2.92 -> 2.93
	- eliminate old rpmrc configuration syntax.
	- pgp5 support (Carlo Wood <carlo@runaway.xs4all.nl>)
	- fix: segfault from double close on ftpGetFileDesc->ftpAbort path.
	- fix: don't add header if signature generation failed (Carlo Wood).
	- more DU 4.0D fiddles (Shing-Gene Yung).
	- fix: segfault from unknown uid/gid -- use builder's uid/gid instead.
	- autoReq/autoProv now per-package.
	- fix: avoid segfault using --prefix until ewt fixes.
	- add --define "%foo %bar" option.
	- dump macros to same fd as --showrc uses.
	- add %GNUconfigure for full-blown package regeneration.
	- fix: RPM_ARCH/RPM_OS had wrong values.
	- fix: create ppc directories correctly.
	- (re-)enable fixowner/fixgroup macros.
	- fix: specfile BuildRoot was masking rpmrc macro.
	- expand twiddles in macrofiles list.
	- add explicit macrofiles path to rpmrc.
	- add per-target macrofiles to search path.