@@ -5,6 +5,7 @@
 	- fix: $2 to triggerpostun scripts was wrong
 	- fix: --querybypkg in man page should be --filesbypkg
 	- fix: optflags not implicitly set to canonical arch value.
+	- fix: prefer pgp2.6.3 over pgp5 if both are installed.
 
 2.94 -> 2.95
 	- fix: last update transaction set segfault bug in installer.
